--- a/frontend/armored_train/game/assets/assets.yaml
+++ b/frontend/armored_train/game/assets/assets.yaml
@@ -1,16 +1,16 @@
 fonts:
   Oswald-Bold: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\fonts\Oswald-Bold.ttf
   Oswald-ExtraLight: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\fonts\Oswald-ExtraLight.ttf
-  Oswald-Light: C:\Users\user\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\fonts\Oswald-Light.ttf
+  Oswald-Light: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\fonts\Oswald-Light.ttf
   Oswald-Medium: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\fonts\Oswald-Medium.ttf
   Oswald-Regular: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\fonts\Oswald-Regular.ttf
   Oswald-SemiBold: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\fonts\Oswald-SemiBold.ttf
 images:
-  background: C:\Users\user\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\background.jpg
-  engineering_wagon: C:\Users\user\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\engineering_wagon.png
-  first_level: C:\Users\user\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\first_level.jpg
-  heavy_enemy: C:\Users\user\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\heavy_enemy.png
-  light_enemy: C:\Users\user\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\light_enemy.png
-  locomotive: C:\Users\user\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\locomotive.png
-  medium_enemy: C:\Users\user\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\medium_enemy.png
-  wagon: C:\Users\user\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\wagon.png
+  background: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\background.jpg
+  engineering_wagon: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\engineering_wagon.png
+  first_level: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\first_level.jpg
+  heavy_enemy: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\heavy_enemy.png
+  light_enemy: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\light_enemy.png
+  locomotive: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\locomotive.png
+  medium_enemy: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\medium_enemy.png
+  wagon: C:\Users\Admin\PycharmProjects\Graduation_Project\frontend\armored_train\game\assets\images\wagon.png
