--- a/frontend/armored_train/view/urls_data.yaml
+++ b/frontend/armored_train/view/urls_data.yaml
@@ -1,3 +1,5 @@
 authorize: http://127.0.0.1:8000/auth/token/authorize/
 register: http://127.0.0.1:8000/auth/register/
 score: http://localhost:8000/score/
+user_rating: http://127.0.0.1:8000/user_rating/
+users_rating: http://127.0.0.1:8000/users_rating/
